@@ -1,0 +1,36 @@
+<?php $result =& $this->result ?>
+<?php if (isset($result->blocksLeft)) { ?>
+<div id="leftSidebar">
+
+<?php if ($result->isVerticalNav($result->conf['navigation']['stylesheet'])) { ?>
+<div id="nav">
+    <?php echo $result->navigation ?>
+</div>
+<?php } //if ?>
+
+<?php foreach ($result->blocksLeft as $key => $valueObj) { ?>
+<div class="blockContainer">
+    <?php if ($valueObj->title_class) { ?>
+    <div class="<?php $this->_($valueObj['title_class']) ?>">
+        <?php $this->_($valueObj->title) ?>
+    </div>
+    <?php } else { ?>
+    <div class="blockHeader">
+        <?php $this->_($valueObj->title) ?>
+    </div>
+    <?php } ?> 
+
+    <?php if ($valueObj->body_class) { ?>
+    <div class="<?php $this->_($valueObj->body_class) ?>">
+        <?php echo $valueObj->content ?>
+    </div>
+    <?php } else { ?>
+    <div class="blockContent">
+        <?php echo $valueObj->content ?>
+    </div>
+    <?php } ?>
+</div>
+<?php } ?>
+<?php } ?>
+
+</div>   
