@@ -13,6 +13,7 @@ BUGFIXES
 16-12-05    Changed erroneous ECT tz to CET (Sylvain PAPET)
 
 IMPROVEMENTS
+10-01-06    Implemented a Savant2 template renderer (Andrey Podshivalov)
 06-01-06    Added generateRadioList method to SGL_Output (mawan)
 06-01-06    Added a wrapper to create html views easily:
                 $view = new SGL_HtmlSimpleView($output);
